--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                     <h4 class="text-white font-bold mb-6">Contact</h4>
                     <ul class="space-y-3">
                         <li class="flex items-center text-slate-500">
-                            <i data-lucide="map-pin" class="w-4 h-4 mr-2"></i> New York, NY
+                            <i data-lucide="map-pin" class="w-4 h-4 mr-2"></i> Albany, NY
                         </li>
                         <li class="flex items-center text-slate-500">
                             <i data-lucide="mail" class="w-4 h-4 mr-2"></i> ventures@milla.com
@@ -360,4 +360,5 @@
     </script>
 </body>
 </html>
+
 
